Update release.init example config to have distinct cookies
Closes #149

--- a/priv/templates/example_config.eex
+++ b/priv/templates/example_config.eex
@@ -16,13 +16,13 @@ use Mix.Releases.Config,
 environment :dev do
   set dev_mode: true
   set include_erts: false
-  set cookie: <%= inspect(cookie) %>
+  set cookie: <%= inspect(get_cookie.()) %>
 end
 
 environment :prod do
   set include_erts: true
   set include_src: false
-  set cookie: <%= inspect(cookie) %>
+  set cookie: <%= inspect(get_cookie.()) %>
 end
 <%= unless no_docs do %>
 # You may define one or more releases in this file.
