boot: export DISTILLERY_TASK for Elixir runtime
allows Elixir code to distinguish between 'command' and 'start' cases.

--- a/priv/templates/boot.eex
+++ b/priv/templates/boot.eex
@@ -367,6 +367,9 @@ case $NAME in
         ;;
 esac
 
+# For Elixir runtime
+export DISTILLERY_TASK="$1"
+
 # Check the first argument for instructions
 case "$1" in
     start|start_boot)
