--- a/priv/templates/boot_loader_win.eex
+++ b/priv/templates/boot_loader_win.eex
@@ -4,6 +4,7 @@
 @for %%A in ("%script_dir%\..") do @(
   set release_root_dir=%%~fA
 )
-@set rel_vsn=TODO
-@set boot_script=%release_root_dir%\releases\%rel_vsn%\boot_win.bat
-%boot_script% "%1"
+@set rel_name=<%= release_name %>
+@set rel_vsn=<%= release_version %>
+@set boot_script=%release_root_dir%\releases\%rel_vsn%\%rel_name%.bat
+@%boot_script% "%1"
